--- a/bundler-packages/compiler/package.json
+++ b/bundler-packages/compiler/package.json
@@ -66,10 +66,12 @@
 		"@tevm/config": "workspace:^",
 		"@tevm/resolutions": "workspace:^",
 		"@tevm/solc": "workspace:^",
-		"@types/node": "^24.6.1",
-		"effect": "3.18.1",
+		"@types/node": "^22.15.21",
+		"abitype": "^1.1.1",
+		"effect": "3.18.0",
 		"resolve": "^1.22.10",
-		"solidity-ast": "^0.4.61"
+		"solidity-ast": "^0.4.61",
+		"solc-typed-ast": "^18.2.5"
 	},
 	"devDependencies": {
 		"@openzeppelin/contracts": "5.4.0",
