--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -80,17 +80,18 @@
 		"@tevm/txpool": "workspace:^",
 		"@tevm/utils": "workspace:^",
 		"@tevm/vm": "workspace:^",
-		"zod": "^3.25.30"
+		"zod": "^4.1.11"
 	},
 	"devDependencies": {
 		"@tevm/decorators": "workspace:^",
 		"@tevm/test-utils": "workspace:^",
 		"@tevm/tsconfig": "workspace:^",
 		"@tevm/tsupconfig": "workspace:^",
-		"abitype": "^1.0.8"
+		"abitype": "^1.1.1"
 	},
 	"peerDependencies": {
-		"viem": "^2.30.1"
+		"viem": "^2.30.1",
+		"zod": "^4.1.11"
 	},
 	"publishConfig": {
 		"access": "public"
